# forticlean

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  config.cfg  forticlean.py  oop_working.py  pyproject.toml  requirements.txt  sorted_config.cfg  tasks.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-tests.yml  ci.yml  codeql-analysis.yml  dependency-review.yml  python-publish.yml
forticlean/: constants.py  main.py  utils.py
src/: constants.py  main.py  utils.py
src/conf/: config_schema.yaml  default.yaml
tests/: test_main.py  test_utils.py
tests/expected/delete_sections/: 7-0.cfg
tests/expected/remove_trailing_spaces/: 7-0.cfg
tests/expected/sort_config_sections/: 7-0.cfg
tests/expected/sort_config_subsections/: 7-0.cfg
tests/inputs/: 7-0.cfg  7-2.cfg
