[tool.poetry]
name = "forticlean"
version = "1.0.0"
description = "Clean & sort FortiOS config files for operations & automation tasks."
authors = ["Ryan Merolle"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "*"}
rich = "*"

[tool.poetry.scripts]
forticlean = "src.main:main"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
bandit = "*"
black = "*"
debugpy = "*"
flake8 = "*"
isort = "*"
mypy = "*"
mypy-extensions = "*"
pre-commit = "*"
pytest = "*"
ruff = "*"
sourcery-analytics = "*"
sourcery-cli = "*"
toml = "*"
yamllint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["venv", ".venv"]

[tool.black]
exclude = "(venv, .venv)"

[tool.isort]
profile = "black"
skip = "venv, .venv"
balanced_wrapping = true
atomic = true
line_length = 100

[tool.flake8]
line_length = 100

[tool.ruff]
line-length = 100
exclude = [".venv"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pydocstyle]
inherit = false
[pydocstyle]
convention = "google"
match = '((?!excluded_file).)*\.py'
match_dir = '^(?!(venv|.venv)).*'

[tool.mypy]
exclude = ['venv', '.venv']
pretty = true
ignore_missing_imports = true
