[tool.poetry]
name = "forticlean"
version = "0.0.0"  # this is a placeholder - version is set in the CI on release
description = "Clean & sort FortiOS config files."
homepage = "https://github.com/ryanmerolle/forticlean"
documentation = "https://github.com/ryanmerolle/forticlean"
authors = ["Ryan Merolle"]
readme = "README.md"
packages = [{include = "src"}]
keywords = ["fortios", "python"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "*"
pyyaml = "*"
rich = "*"
typer = {extras = ["all"], version = "*"}

[tool.poetry.scripts]
forticlean = "src.main:app"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
bandit = "*"
black = "*"
debugpy = "*"
flake8 = "*"
isort = "*"
mypy = "*"
mypy-extensions = "*"
pre-commit = "*"
pytest = "*"
ruff = "*"
sourcery-analytics = "*"
#sourcery-cli = "*"
toml = "*"
typer-cli = "*"
yamllint = "*"
pytest-cov = "*"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["venv", ".venv"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
skip = "venv, .venv"
balanced_wrapping = true
atomic = true
line_length = 100

[tool.flake8]
max-line-length = 100
max-complexity = 10

[tool.ruff]
line-length = 100

[tool.ruff.pydocstyle]
convention = "google"

[tool.pydocstyle]
inherit = false
[pydocstyle]
convention = "google"
match = '((?!excluded_file).)*\.py'
match_dir = '^(?!(venv|.venv)).*'

[tool.mypy]
exclude = ['venv', '.venv']
pretty = true
ignore_missing_imports = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARN"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
omit = ["tests/*"]
